Fix some typos with the semicolons and punctuation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </dl>
       </div>
       <div>
-        <span class="btn">Learn more...</span>>
+        <span class="btn">Learn more...</span>
       </div>
     </a>
   </main>
